--- a/index.html
+++ b/index.html
@@ -447,6 +447,13 @@
              <p>Aprendi a usar spring dentro de Next, y como es su conexion con Java, el cual ayuda a relacionar. </p>
             <h4>Semana 14: Desarrollar API Rest con Spring</h4>
              <p>Para finalizar el curso, se aprendio lo que es a usar APis con Spring para el desarrollo de paginas webs, lo que cual me permitio junto con mi grupo a desarrollar el trabajo final del curso para asi presentar una pagina web que usa tanto el lado frontend como el lado backend.</p>
+            
+             <h3>REFLEXION POR EL FIN DEL CURSO</h3>
+             <p>Al llegar al final de este curso de desarrollo de paginas web, es inevitable no reflexionar sobre lo que he experimentado y aprendido a lo largo de estas semanas. La creación de un portafolio que resalta mis habilidades en desarrollo web ha sido más que una simple tarea; ha sido un proceso de autoevaluación constante y crecimiento personal.</p>
+             <p>Desde la etapa de planificación estratégica hasta la implementación de tecnologías como HTML, CSS, JavaScript, React, Next.js, APIs y Spring, he tenido que tomar decisiones fundamentadas en mi conocimiento y comprensión de estas herramientas.</p>
+             <p>Este conocimiento no solo es valioso en sí mismo, sino que también representa una base sólida para enfrentar proyectos futuros. La capacidad de integrar frontend y backend, trabajar con diversas tecnologías y comprender la arquitectura de aplicaciones web me posiciona para afrontar desafíos más avanzados en el desarrollo web.</p>
+             <p>En resumen, este curso no solo ha sido un aprendizaje técnico, sino también un aprendizje de autorreflexión y mejora continua. Y por ello deseo aplicar estos conocimientos en proyectos prácticos y seguir aprendiendo a como ser un desarrollador web y las diferentes ramas que hay dentro de mi carrera.</p>
+            
             </div>     
     </section>
 
