--- a/semana5.html
+++ b/semana5.html
@@ -33,7 +33,7 @@
     <p>Tambien facilita el manejo de la lógica de la aplicación y la actualización dinámica de la interfaz de usuario en respuesta a cambios de estado.</p>
     <p>Por último, React cuenta con un amplio ecosistema de bibliotecas y herramientas, como Redux para la gestión del estado, y muchas más.</p>
     <div class="cursosi">
-        <img class="imagen" src="img/react.jpg" alt="">
+        <img class="imagen" src="img/semana5.jpg" alt="">
     </div>
 
 </div>
